<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3E0A7"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Main Menu"
        android:textSize="30dp"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:id="@+id/textView"
        android:textStyle="bold"/>

    <at.markushi.ui.CircleButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cb_color="#A8CDD6"
        android:id="@+id/btn_status"
        android:src="@drawable/iconstatus"
        android:layout_marginStart="32dp"
        android:onClick="mycactus"
        android:layout_alignTop="@+id/btn_lib"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mycactus"
        android:paddingTop="5dp"
        android:id="@+id/textView4"
        android:layout_above="@+id/btn_dev"
        android:layout_below="@+id/btn_status"
        android:layout_alignEnd="@+id/btn_status"
        android:layout_alignStart="@+id/btn_status"
        android:gravity="center_horizontal"/>

    <at.markushi.ui.CircleButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cb_color="#A8CDD6"
        android:id="@+id/btn_history"
        android:src="@drawable/history"
        android:onClick="history"
        android:layout_below="@+id/btn_lib"
        android:layout_alignStart="@+id/btn_lib"
        android:layout_marginTop="55dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history"
        android:gravity="center"
        android:layout_below="@+id/btn_dev"
        android:layout_alignStart="@+id/btn_history"
        android:layout_alignEnd="@+id/btn_history" />


    <at.markushi.ui.CircleButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cb_color="#A8CDD6"
        android:id="@+id/btn_dev"
        android:src="@drawable/icondeveloper"
        android:onClick="mydeveloper"
        android:layout_alignTop="@+id/btn_history"
        android:layout_alignStart="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Aboutdeveloper"
        android:layout_below="@+id/btn_dev"
        android:layout_alignEnd="@+id/btn_dev"
        android:layout_alignStart="@+id/btn_dev"
        android:gravity="center_horizontal"/>

    <at.markushi.ui.CircleButton
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:cb_color="#A8CDD6"
        android:id="@+id/btn_lib"
        android:src="@drawable/iconlibrary"
        android:onClick="library"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Library"
        android:layout_above="@+id/btn_dev"
        android:gravity="center_horizontal"
        android:layout_below="@+id/btn_lib"
        android:layout_alignEnd="@+id/btn_history"
        android:layout_alignStart="@+id/btn_history" />
</RelativeLayout>